--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.16",
     "@astrojs/check": "^0.9.4",
+    "@supabase/supabase-js": "^2.46.2",
+    "astro": "^4.16.16",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^5.1.3",
+    "tailwindcss": "^3.4.15"
   }
 }
