--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^6.0.0",
     "@supabase/supabase-js": "^2.46.2",
     "astro": "^4.16.16",
     "autoprefixer": "^10.4.20",
